unpackaged/main/default/objects/Opportunity/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account.Account_Owner_Name__c</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>