unpackaged/main/default/objects/Opportunity/fields/Active_Deal_Reg__c.field-meta.xml
<CustomField>
    <fullName>Active_Deal_Reg__c</fullName>
    <label>Active Deal Reg</label>
    <summaryFilterItems>
        <field>varcpq__Registration__c.varcpq__Status__c</field>
        <operation>notEqual</operation>
        <value>Expired, Closed, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>varcpq__Registration__c.varcpq__Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>