unpackaged/main/default/objects/Opportunity/fields/Active_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Active_Quotes__c</fullName>
    <label>Active Quotes</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>notEqual</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>