unpackaged/main/default/objects/Opportunity/fields/Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Stage_Change__c</fullName>
    <formula>IF(NOT(IsClosed),NOW()- LastStageChangeDate,null)</formula>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>