unpackaged/main/default/objects/Opportunity/fields/Forecast_Comments__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Comments__c</fullName>
    <label>Forecast Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>