unpackaged/main/default/objects/Opportunity/fields/GP_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>GP_Margin_Percent__c</fullName>
    <formula>(Gross_Profit_Amt__c / Amount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Margin Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>