unpackaged/main/default/objects/Opportunity/fields/Gross_Profit_Amt__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Amt__c</fullName>
    <label>Gross Profit Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>