unpackaged/main/default/objects/Opportunity/fields/Lost_Reason_Note__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Note__c</fullName>
    <label>Lost Reason Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>