unpackaged/main/default/objects/Opportunity/fields/Owner_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Current_User__c</fullName>
    <formula>Owner.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is Current User</label>
    <type>Checkbox</type>
</CustomField>