unpackaged/main/default/objects/Opportunity/fields/SE_Assigned__c.field-meta.xml
<CustomField>
    <fullName>SE_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>