unpackaged/main/default/objects/Opportunity/fields/Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>Todays_Date__c</fullName>
    <formula>Today()</formula>
    <label>Todays Date</label>
    <type>Date</type>
</CustomField>