unpackaged/main/default/objects/Opportunity/fields/Varcomm_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Varcomm_Quote_Id__c</fullName>
    <label>Varcomm Quote Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>