unpackaged/main/default/objects/Opportunity/validationRules/Opportunity_Owner_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Owner_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(
ISBLANK(Owner.UserRoleId),

NOT(
CONTAINS(
UPPER(Owner.UserRole.Name),
&quot;ACCOUNT EXEC&quot;
)
)
)
)</errorConditionFormula>
    <errorMessage>Only Account Executives are allowed to be the owner of an opportunity</errorMessage>
</ValidationRule>