unpackaged/main/default/objects/Opportunity/listViews/All_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Gross_Profit_Amt__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Account_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>