unpackaged/main/default/objects/Opportunity/listViews/Canadian_Opportunities.listView-meta.xml
<ListView>
    <fullName>Canadian_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Gross_Profit_Amt__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Account_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Record_Type__c</field>
        <operation>equals</operation>
        <value>Canadian Account</value>
    </filters>
    <label>Canadian Opportunities</label>
</ListView>