unpackaged/main/default/objects/Opportunity/listViews/SEs_Opportunities.listView-meta.xml
<ListView>
    <fullName>SEs_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Owner_Name__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>varcpq__Margin__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>SE_Notes__c</columns>
    <columns>SE_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>SE&#39;s Opportunities</label>
</ListView>